--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
     <!--Start quiz-->
     <div id = "intro">
-        <h2>Coding Quiz Challenge</h2>
-        <p>This is a score-based timed quiz. Any wrong answer will result in your timer being cut down. good luck~</p>
+        <h2>Coding Quiz</h2>
+        <br>
+        <h4>This quiz is timed.  When you get an answer wrong your time remaining will be reduced.</h4>
+        <br>
         <button type="button" id = "startButton" class="btn btn-primary btn-sm">Start Quiz</button>
     </div>
     
@@ -46,10 +48,10 @@
 
 
     <div id = "gameOver" class = "hide">
-        <h2>Thank you for participating</h2>
+        <h2>Hope You Enjoyed</h2>
         <p id = "finalScore"></p>
         <form class="col-lg-6 offset-lg-3 ">
-            <p>Please submit your name or initial</p>
+            <p>Submit your Name or Initials</p>
             <div class="d-flex justify-content-center">
               <input id = "userInitial" type="text" placeholder="Insert initial">
               <span class="input-group-btn">
